add resize event for textarea to fix Chrome,Firefox and Opera etc.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
 		Remove this if you use the .htaccess -->
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<title>count</title>
+		<title>jQuery Charcount Plugin</title>
 		<style type="text/css">
 			#j_tx {
 				line-height: 24px;
